# ego-slam

./: Readme.txt
scripts_trans_rotation_avg/: IA.txt  R_comp.txt  RunBundler.m  TTA.txt  T_comp.txt  errorFittingPerCluster.txt  generate_map_to_triangulate_script.m  original_pairs_comp.txt  runscript.m  runscript_old.m  test_comp.txt  test_rotE.txt  test_transE.txt  trianTest.txt
scripts_trans_rotation_avg/matlab_scripts/: BoxMedianSO3Graph.p  Compare3DPointCloud.p  CompareRotationGraph.p  CompareRotations.p  R2q.p  R2w.p  RobustMeanDirectionGraph.p  RobustMeanSO3Graph.p  ValidateSO3Graph.p  cameraDumporiginal.m  find_coherent_3d_points_forTranslationavgNpoints.m  find_connected_pairwise.m  find_connected_returned_comp.m  generatemap_withpath.m  mapping_sequential_to_global_index.m  q2R.p  refine_with_triangle_constraint.m  refine_with_triangle_constraintafterRA.m  track_read.m  trans_avg_func_with_frob_with_oripath.m  w2R.p
slam_src/: CMakeLists.txt  build.sh  merge_command.txt  run_slam.sh
slam_src/data/vid5/: calib_results_1440p.txt
slam_src/dump/scripts_dump/: dense-helpers-cc.lib  helpers-cc.lib  merge.exp  merge.lib  sift-cc.lib  slam.exp  slam.lib
slam_src/include/: alignment.h  ceres_fit.h  densehelpers.h  helpers.h  indoorhelpers.h  intermediate_helpers.h  nvmhelpers.h  pointcloud.h  sift_processing.h  triangulate.h  undistort.h
slam_src/scripts/: corres_new.cpp  densify.cpp  epipolar_verification.cpp  evaluate_odometry.cpp  main.cpp  merge_pt_cloud.cpp  omni2persp.cpp  place_side.cpp  priors.cpp  slam.cpp  slam.cpp~
slam_src/src/: ceres_fit.cc  correspondance.cc  helpers.cc  pointcloud.cc
